@@ -2,6 +2,7 @@ PZS-NG CHANGELOG
 ----------------
 
 v1.2.0  --> 1.2.x :
+		- Refactor Blow.tcl, remove topic trigger binds if unwanted, add Blow.zpt for *TOPIC.
 		- Fix ngBot reloading on userfile reloads caused by botnet userfile sharing.
 		  This had possible negative side-effects in plugins.
 		- Fix ngBot logoutput of amount of plugins loaded when only 1 is loaded.
